
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2006-05-29

	* #include cleanups in common.h, system.h and C files.

	2006-04-28

	* Updated copyright dates.

	2006-04-13

	* Included additional config file options in bogofilter's
	  --help message.

	2006-03-27

	* Corrected option parsing in bogotune to support -n ham1 ham2
	  -s spam1 spam2 as suggested by bogotune -h; broken since 0.93.2.

	2006-03-26

	* Corrected problem with bogotune's -D option (thanks to Jason Smith).

	* Corrected man page description of bogotune's -n and -s options.

	2006-03-17

	* Fixed bf_compact's test for transactional environment.

	2006-03-12

	* 1.0.2 Promoted to "Stable" status

1.0.2	2006-03-03

	2006-02-19

	* Added vm-bogofilter.el for using bogofilter with VM, an
          Emacs mail tool (thanks to Björn Knutsson).
	* Added FAQ question "How do I use bogofilter with VM (an
          Emacs mail tool)?" (thanks to Pimpon).

	2006-02-14

	* SleepyCat has been acquired by Oracle, who are now providing
	  Berkeley DB. Since most of the references are to actual
	  strings in the programs or addresses that remain unchanged,
	  this will only gradually show in the bogofilter sources and
	  documentation.

	2006-02-06

	* Flush output after writing spam header line and/or message body.
	* When database is near to maximum allowed size, allow reading
	  it and disallow writing to it.

	2006-01-30

	* Fix formatting of Rtable output when in the message header,
	  this keeps verbose passthrough modes RFC-822/2822 compliant.

	2006-01-29

	* The configure script, when checking Berkeley DB capabilities,
	  now checks for logging and transactional subsystems rather